--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,3 @@
-<h1>users#show</h1>
-<p>Find me in app/views/home/users/show.html.erb</p>
+<h1>User Profile</h1>
+<h3>Logged in as: <%= @user.email %></h3>
+
