adds landing page & re-route w/ devise to user#show after sign in

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div class="jumbotron">
 
+  <h1>Just Do It: a Shia LaBouf inspired to do app</h1>
+
+</div>
