--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,5 +1,5 @@
 
 <%= form_for([@user, @user.items.new]) do |f| %>
-  To do: <%= f.text_field :name %>
+  Add a To do: <%= f.text_field :name %>
   <%= f.submit "add", class: 'btn btn-success' %>
 <% end %>
