--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,7 +1,9 @@
 <% if @user.items.any? %>
-  <h3>Items (<%= @user.items.count %>)</h3>
+  <h3>Things to do (<%= @user.items.count %>)</h3>
   <ol>
-    <%= render @user.items %>
+    <% @user.items.each do |item| %>
+      <li><%= item.name %></li>
+    <% end %>
   </ol>
   <% else %>
     <p><%= @user.email %> has no items</p>
