--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,16 @@
 <h3>Logged in as: <%= @user.email %></h3>
 <div>
 
-  <%= render :partial => "items/item" %>
+    <% if @user.items.any? %>
+      <h3>Things to do (<%= @user.items.count %>)</h3>
+      <ol>
+        <% @user.items.each do |item| %>
+          <li><%= item.name %></li>
+        <% end %>
+      </ol>
+      <% else %>
+        <p><%= @user.email %> has no items</p>
+    <% end %>
   <%= render :partial => "items/form" %>
 
 </div>
