--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron">
 
-  <h1>Just Do It: a Shia LaBouf inspired to do app</h1>
+  <h1 style="color: white">Just Do It: a Shia LaBouf inspired to do app</h1>
 
 </div>
